# Advance-MRP-Shortage-Report-SIPL

./: MANIFEST.in  README.md  license.txt  mrp_shortage_report.sql  pyproject.toml  setup.py
mrp_shortage_report/: hooks.py  modules.txt  patches.txt
mrp_shortage_report/mrp_shortage_report/report/advanced_mrp_shortage_report/: advanced_mrp_shortage_report.js  advanced_mrp_shortage_report.json  advanced_mrp_shortage_report.py
mrp_shortage_report/mrp_shortage_report/report/all_projects_budget_overview/: all_projects_budget_overview.js  all_projects_budget_overview.json  all_projects_budget_overview.py
mrp_shortage_report/mrp_shortage_report/report/mrp_shortage_report/: mrp_shortage_report.js  mrp_shortage_report.json  mrp_shortage_report.py
mrp_shortage_report/mrp_shortage_report/report/project_document_summary/: project_document_summary.js  project_document_summary.json  project_document_summary.py
mrp_shortage_report/mrp_shortage_report/report/project_material_tracking_report/: project_material_tracking_report.js  project_material_tracking_report.json  project_material_tracking_report.py
mrp_shortage_report/mrp_shortage_report/report/subassembly_readiness_report/: subassembly_readiness_report.js  subassembly_readiness_report.json  subassembly_readiness_report.py
mrp_shortage_report/patches/v1_0/: fix_report_type.py
