[project]
name = "mrp_shortage_report"
authors = [
    { name = "Nexgen ERP Technologies", email = "info@nexgenerptechnologies.com"}
]
description = "MRP Shortage Report for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.app-dependencies]
erpnext = ">=15.0.0"

